# site-recipes-app

./: .dockerignore  .env.template  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: tests.yml
auth_user/: forms.py  tests.py  urls.py  views.py
auth_user/templates/auth/: log_in.html  registration.html
auth_user_app/: apps.py  forms.py  urls.py  views.py
auth_user_app/templates/auth/: base.html  log_in.html  registration.html
core/: settings.py  urls.py
core/settings/: __init__.py  apps.py  base.py  database.py  env.py
nginx/: site-recipes.conf
recipes/: tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_description_and_more.py  0003_alter_recipe_author_alter_recipe_image_and_more.py  0004_alter_recipe_time_cooking.py  0005_alter_recipe_author.py  0006_alter_recipe_author.py  0007_alter_recipe_image.py  0008_category_recipe_category.py
recipes/static/css/: base.css
recipes/templates/recipes/: base.html  main.html  recipe_confirm_delete.html  recipe_create.html  recipe_detail.html  recipe_update.html  recipes_list.html
site_recipes/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
site_recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_description_and_more.py  0003_alter_recipe_author_alter_recipe_image_and_more.py  0004_alter_recipe_time_cooking.py  0005_alter_recipe_author.py  0006_alter_recipe_author.py  0007_alter_recipe_image.py  0008_category_recipe_category.py
site_recipes/templates/site_recipes/: main.html  recipe_confirm_delete.html  recipe_create.html  recipe_detail.html  recipe_update.html  recipes_list.html
site_recipes_app/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
site_recipes_app/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_description_and_more.py  0003_alter_recipe_author_alter_recipe_image_and_more.py  0004_alter_recipe_time_cooking.py  0005_alter_recipe_author.py  0006_alter_recipe_author.py  0007_alter_recipe_image.py  0008_category_recipe_category.py
site_recipes_app/templates/site_recipes_app/: main.html  recipe_confirm_delete.html  recipe_create.html  recipe_detail.html  recipe_update.html  recipes_list.html
site_recipes_project/: asgi.py  settings.py  urls.py  wsgi.py
