[project]
name = "siterecipesapp"
version = "0.1.0"
description = "Django web app to browse, create, and manage personal cooking recipes."
authors = [{ name = "Domitori", email = "dmlegasy@gmail.com" }]
requires-python = ">=3.12.3,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=5.2.4,<6",
    "pillow>=11.3.0,<12",
    "dotenv>=0.9.9,<0.10",
    "gunicorn>=23.0.0,<24",
    "psycopg2-binary>=2.9.10,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
