[project]
name = "siterecipesapp"
version = "0.1.0"
description = "Django web app to browse, create, and manage personal cooking recipes."
authors = [{ name = "Domitori", email = "dmlegasy@gmail.com" }]
requires-python = ">=3.12.3,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=5.2.4,<6",
    "pillow>=11.3.0,<12",
    "gunicorn>=23.0.0,<24",
    "psycopg>=3.3.4",
    "django-environ>=0.14.0",
]

[dependency-groups]
dev = [
    "faker>=40.28.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"core/settings/__init__.py" = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["core", "recipes", "auth_user"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
